@@ -1,3 +1,9 @@
+2003-10-09  Hans Petter Jansson  <hpj@ximian.com>
+
+	* gui/e-cal-model.c (get_classification): Adapt to libical API changes.
+	(ecm_set_value_at): Break after each case, so we don't set the passed value
+	in more than one field.
+
 2003-10-09  Rodrigo Moya <rodrigo@ximian.com>
 
 	* gui/e-cal-view.c (e_cal_view_delete_selected_occurrence):
